bad/mul_invalid_types_string_array.example_compiler_output
ERROR
[1mbad/mul_invalid_types_string_array.lat:3:8: [1;31merror: [0;1mmultiplication is defined only for int values, not `string` and `string[]`[m
	"abc" * new string[3];
	      [1;32m^[m
